[gd_scene load_steps=9 format=3 uid="uid://c3c0xltb6u78p"]

[ext_resource type="Theme" uid="uid://bb6vwl0h1flws" path="res://assets/FlatUI4/kenneyUI-blue.tres" id="1_4ends"]
[ext_resource type="FontFile" uid="uid://b4h7ccgvjcco3" path="res://assets/ken_fonts/kenpixel.ttf" id="1_5yr4w"]
[ext_resource type="AudioStream" uid="uid://mugd7bxw8xu3" path="res://assets/sounds/001_Hover_01.wav" id="2_r015o"]
[ext_resource type="Script" path="res://scripts/settings.gd" id="2_t4rs3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3jb1j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ebrgi"]
bg_color = Color(0.756087, 0.756087, 0.756087, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_onc8e"]
bg_color = Color(0.603248, 0.603248, 0.603248, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2r88t"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 5
shadow_offset = Vector2(0, 3)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4ends")
script = ExtResource("2_t4rs3")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.131
anchor_right = 0.5
anchor_bottom = 0.131
offset_left = -264.0
offset_top = -52.888
offset_right = 270.0
offset_bottom = 53.112
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("1_5yr4w")
theme_override_font_sizes/font_size = 70
text = "Settings:"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.809414
anchor_right = 0.5
anchor_bottom = 0.809414
offset_left = -82.5
offset_top = -52.5
offset_right = 82.5
offset_bottom = 52.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_5yr4w")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_3jb1j")
theme_override_styles/hover = SubResource("StyleBoxFlat_ebrgi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_onc8e")
theme_override_styles/normal = SubResource("StyleBoxFlat_2r88t")
text = "Back"
metadata/_edit_use_anchors_ = true

[node name="backClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_r015o")
bus = &"SFX"

[node name="SettingsTabs" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 192.0
offset_top = 128.0
offset_right = -192.0
offset_bottom = -184.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4ends")
current_tab = 0

[node name="Video" type="TabBar" parent="SettingsTabs"]
layout_mode = 2
theme = ExtResource("1_4ends")
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="SettingsTabs/Video"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VideoSettings" type="GridContainer" parent="SettingsTabs/Video/MarginContainer"]
layout_mode = 2
columns = 2

[node name="DisplayModeLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Display Mode"

[node name="DisplayOptionButton" type="OptionButton" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10
selected = 0
item_count = 2
popup/item_0/text = "Windowed"
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="VsyncLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Vsync"

[node name="VsyncButton" type="CheckButton" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/icon_max_width = 0

[node name="DisplayFpsLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Display FPS"

[node name="DisplayFpsButton" type="CheckButton" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10

[node name="MaxFpsLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Max FPS"

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10

[node name="MaxFpsValue" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings/HBoxContainer"]
layout_mode = 2
text = "Max"

[node name="MaxFpsSlider" type="HSlider" parent="SettingsTabs/Video/MarginContainer/VideoSettings/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 30.0
max_value = 500.0
value = 500.0

[node name="BloomLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Bloom"

[node name="BloomButton" type="CheckButton" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10

[node name="BrightnessLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
visible = false
layout_mode = 2
text = "Brightness"

[node name="BrightnessSlider" type="HSlider" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
visible = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
max_value = 2.0
step = 0.1
value = 1.0

[node name="Audio" type="TabBar" parent="SettingsTabs"]
visible = false
layout_mode = 2
theme = ExtResource("1_4ends")
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="SettingsTabs/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="AudioSettings" type="GridContainer" parent="SettingsTabs/Audio/MarginContainer"]
layout_mode = 2
columns = 2

[node name="MasterVolumeLabel" type="Label" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="MusicVolumeLabel" type="Label" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="SfxVolumeLabel" type="Label" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
text = "SFX Volume"

[node name="SfxVolumeSlider" type="HSlider" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0
